[gd_scene load_steps=5 format=3 uid="uid://d0l06uoasx8n0"]

[ext_resource type="Script" path="res://code/GUI/pause_menu.gd" id="1_glqld"]
[ext_resource type="AudioStream" uid="uid://cj7xj6ugybtwx" path="res://Resources/sound/click.mp3" id="2_c0fjb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qgec0"]
bg_color = Color(0, 0, 0, 0.392157)

[sub_resource type="LabelSettings" id="LabelSettings_ac7u6"]
font_size = 96

[node name="pause_menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_glqld")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qgec0")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 400
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 400
theme_override_constants/margin_bottom = 300

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Paused"
label_settings = SubResource("LabelSettings_ac7u6")
horizontal_alignment = 1

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Continue" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Continue"

[node name="Control2" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Settings" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Settings"

[node name="Control3" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="MainMenu" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Main Menu"

[node name="Control4" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_c0fjb")

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
